kubernetes/ch4/sample-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  namespace: u-9nl7s
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
        - name: sample
          image: "gcr.io/google-samples/hello-app:2.0"

---

apiVersion: v1
kind: Service
metadata:
  name: sample-app-service
  namespace: u-9nl7s
  labels:
    app: sample
spec:
  type: ClusterIP
  selector:
    app: sample
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
