kubernetes/ch4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: u-9nl7s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "django.aayyss.csc8567.luxbulb.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voiture-svc
                port:
                  number: 80S
  tls:
    - hosts:
        - django.aayyss.csc8567.luxbulb.org
      secretName: secret  # Assurez-vous que ce secret existe dans le même namespace
